Feat: Conexao com banco de dados

--- a/PicpaySimples.csproj
+++ b/PicpaySimples.csproj
@@ -7,14 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Project\Application\Services\" />
-    <Folder Include="Project\Domain\Models\" />
-    <Folder Include="Project\Infrastructure\Repositories\" />
-    <Folder Include="Project\UI\Controllers\" />
   </ItemGroup>
 
 </Project>
