--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "PicpaySimplesContext": "Server=DESKTOP-HJCVF5Q;Database=PicpayDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;"
+    }
 }
