--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
+        "PicpaySimplesTestContext": "Server=DESKTOP-HJCVF5Q;Database=PicpayDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;",
         "PicpaySimplesContext": "Server=localhost,1433;User Id=sa;Password=PicpaySimplesApp01;Database=PicpayDb;Trusted_Connection=false;MultipleActiveResultSets=true;TrustServerCertificate=true;"
     }
 }
