--- a/appsettings.json
+++ b/appsettings.json
@@ -4,9 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
+  },  
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "PicpaySimplesContext": "Server=localhost,1433;User Id=sa;Password=PicpaySimplesApp01;Database=PicpayDb;Trusted_Connection=false;MultipleActiveResultSets=true;TrustServerCertificate=true;"
+        "PicpaySimplesContext": ""
     }
 }
